# PW-HW12

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 6cec1a7548f9_add_fk.py  c0a879be373b_email_for_contact_not_unique.py  ed04bebec145_init.py
src/: schemas.py
src/conf/: config.ini
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py
