[tool.poetry]
name = "hw12"
version = "0.1.0"
description = ""
authors = ["VadymBoyko <109297726+VadymBoyko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2 = "^2.9.6"
alembic = "^1.10.3"
uvicorn = "^0.21.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
passlib = "^1.7.4"
libgravatar = "^1.0.4"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

